--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -74,7 +74,7 @@ jobs:
     # secrets:
     #   some-secret: ${{ secrets.some-secret }}
   print-deploy-result:
-    needs: derploy
+    needs: deploy
     runs-on: ubuntu-latest
     steps:
       - name: Print deploy output
